--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <div class="modal-dialog modal-md">
 <div class="modal-content slim">
 <form>
+<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	<p>
 		<label for="task">Task Name:</label>
 		<input type="text" name="task" id="task">
@@ -49,6 +50,7 @@
 	<label for="task">Upload File:</label>
 		<div class="fileUploader" id="one"></div>
 	</p>
+	<button type="button" class="addTask btn btn-primary" id="addIt">Add Task</button>
 </form> 
 </div></div></div>
 
