--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <h1>To-Do List!</h1>
 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target=".checkit">Add Item</button>
 <div id="todo-app">
-
+<input type="text" id="new-todo" placeholder="What to do?">
+<h2>Pending</h2>
 <div class="list">
-<h2>Pending</h2>	
+	
     <div class="todo">
     <label class="todo-label">
     <input type="checkbox" value="">10 am Conference call</label>
@@ -44,7 +45,7 @@
 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	<p>
 		<label for="task">Task Name:</label>
-		<input type="text" name="task" id="task">
+		<input type="text" name="task" id="new-todo">
 	</p>
 	<p>
 	<label for="task">Upload File:</label>
